--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -36,4 +36,66 @@ div.login-container div.login-window button.login-student {
   grid-area: login;
 }
 
+div.dashboard-container {
+  user-select: none;
+}
+div.dashboard-container p.student-name {
+  text-align: right;
+  color: #2c9aa4;
+}
+div.dashboard-container div.potd-container {
+  cursor: pointer;
+  padding: 2em;
+  border: 3px solid #77ade6;
+  border-radius: 1em;
+}
+div.dashboard-container div.potd-container:hover {
+  background-color: #f0f6fc;
+}
+div.dashboard-container div.potd-container h2 {
+  margin: 0;
+  color: #1a5490;
+}
+div.dashboard-container div.potd-container div.potd-preview {
+  margin: 2em;
+}
+div.dashboard-container div.puzzle-list-container {
+  padding: 2em;
+  border: 3px solid #9edfe5;
+  margin-top: 2em;
+  border-radius: 1em;
+  background-color: #ddf3f5;
+}
+div.dashboard-container div.puzzle-list-container h2 {
+  margin: 0;
+  color: #174f54;
+}
+div.dashboard-container div.puzzle-list-container ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: auto;
+}
+div.dashboard-container div.puzzle-list-container ul li {
+  background-color: white;
+  padding: 1em;
+  border: 3px solid #77ade6;
+  border-radius: 0.5em;
+  cursor: pointer;
+}
+div.dashboard-container div.puzzle-list-container ul li:hover {
+  background-color: #f0f6fc;
+}
+div.dashboard-container div.puzzle-list-container ul li h3 {
+  margin: 0;
+  color: #1a5490;
+}
+div.dashboard-container div.puzzle-list-container ul li div.list-preview {
+  margin: 0.5em;
+}
+
+body {
+  padding: 1em;
+}
+
 /*# sourceMappingURL=index.css.map */
