--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,6 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Alegreya&display=swap");
 div.login-container {
-  height: 100vh;
-  width: 100vw;
+  height: 90vh;
+  width: 90vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,6 +10,8 @@ div.login-container div.login-window {
   display: grid;
   padding: 2em;
   grid-template-areas: "firstname firstname" "lastname  lastname" "create    login";
+  border: 3px solid #9edfe5;
+  border-radius: 1em;
 }
 div.login-container div.login-window div.name-container {
   margin: 0.5em;
@@ -24,16 +27,24 @@ div.login-container div.login-window div.name-container.last {
 div.login-container div.login-window div.name-container input {
   margin-left: 0.5em;
 }
+div.login-container div.login-window div.name-container input:focus {
+  outline: none;
+}
 div.login-container div.login-window button {
   margin: 1em;
-  padding: 0.5em;
+  margin-bottom: 0;
+  padding: 0.7em;
   cursor: pointer;
+  border: none;
+  border-radius: 0.3em;
 }
 div.login-container div.login-window button.create-student {
   grid-area: create;
+  background-color: #7e6cfb;
 }
 div.login-container div.login-window button.login-student {
   grid-area: login;
+  background-color: #9edfe5;
 }
 
 div.dashboard-container {
@@ -92,6 +103,10 @@ div.dashboard-container div.puzzle-list-container ul li h3 {
 }
 div.dashboard-container div.puzzle-list-container ul li div.list-preview {
   margin: 0.5em;
+}
+
+* {
+  font-family: "Alegreya";
 }
 
 body {
