--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Alegreya&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 div.login-container {
   height: 90vh;
   width: 90vw;
@@ -106,7 +106,7 @@ div.dashboard-container div.puzzle-list-container ul li div.list-preview {
 }
 
 * {
-  font-family: "Alegreya";
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
