--- a/src/stylesheets/home.scss
+++ b/src/stylesheets/home.scss
@@ -38,6 +38,7 @@ div.dashboard-container {
 			display: grid;
 			grid-template-columns: repeat(2, 1fr);
 			grid-auto-rows: auto;
+			gap: 1.5em;
 			li {
 				background-color: white;
 				padding: 1em;
