--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -86,6 +86,7 @@ div.dashboard-container div.puzzle-list-container ul {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: auto;
+  gap: 1.5em;
 }
 div.dashboard-container div.puzzle-list-container ul li {
   background-color: white;
