--- a/src/stylesheets/home.scss
+++ b/src/stylesheets/home.scss
@@ -39,6 +39,7 @@ div.dashboard-container {
 			grid-template-columns: repeat(2, 1fr);
 			grid-auto-rows: auto;
 			gap: 1.5em;
+			padding: 0;
 			li {
 				background-color: white;
 				padding: 1em;
