--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -87,6 +87,7 @@ div.dashboard-container div.puzzle-list-container ul {
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: auto;
   gap: 1.5em;
+  padding: 0;
 }
 div.dashboard-container div.puzzle-list-container ul li {
   background-color: white;
