--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,5 +1,7 @@
 @use "./login";
 @use "./home";
+@use "../puzzles/calcudoku/style";
+@use "./calcudoku";
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 * {
