--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -107,6 +107,66 @@ div.dashboard-container div.puzzle-list-container ul li div.list-preview {
   margin: 0.5em;
 }
 
+div.grid-container {
+  display: grid;
+  height: 30em;
+  width: 30em;
+  gap: 1px;
+  background-color: black;
+  border: solid 3px;
+}
+div.grid-container[size="4"] {
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+div.grid-container[size="5"] {
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+}
+div.grid-container[size="6"] {
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+}
+div.grid-container div.calcudoku-square {
+  position: relative;
+  background-color: white;
+  box-sizing: border-box;
+  padding: 0.5em;
+  border: solid 2px;
+}
+div.grid-container div.calcudoku-square.n-up {
+  border-top: none;
+}
+div.grid-container div.calcudoku-square.n-down {
+  border-bottom: none;
+}
+div.grid-container div.calcudoku-square.n-right {
+  border-right: none;
+}
+div.grid-container div.calcudoku-square.n-left {
+  border-left: none;
+}
+div.grid-container div.calcudoku-square div.cage-indicator {
+  position: absolute;
+  top: 0.2em;
+  left: 0.2em;
+}
+div.grid-container div.calcudoku-square input {
+  border: none;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  font-size: 4em;
+  text-align: right;
+}
+div.grid-container div.calcudoku-square input::-webkit-inner-spin-button, div.grid-container div.calcudoku-square input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+div.grid-container div.calcudoku-square input:focus {
+  outline: none;
+}
+
 * {
   font-family: "Open Sans", sans-serif;
 }
