--- a/src/stylesheets/calcudoku.scss
+++ b/src/stylesheets/calcudoku.scss
@@ -29,6 +29,9 @@ div.grid-container {
 		box-sizing: border-box;
 		padding: 0.5em;
 		border: solid 2px;
+		&.active{
+			background-color: #e5e5e5;
+		}
 		&.n-up{
 			border-top: none;
 		}
