--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -133,6 +133,7 @@ div.grid-container div.calcudoku-square {
   box-sizing: border-box;
   padding: 0.5em;
   border: solid 2px;
+  cursor: pointer;
 }
 div.grid-container div.calcudoku-square.active {
   background-color: #e5e5e5;
@@ -161,6 +162,7 @@ div.grid-container div.calcudoku-square input {
   height: 100%;
   font-size: 4em;
   text-align: right;
+  cursor: pointer;
 }
 div.grid-container div.calcudoku-square input::-webkit-inner-spin-button, div.grid-container div.calcudoku-square input::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -168,6 +170,19 @@ div.grid-container div.calcudoku-square input::-webkit-inner-spin-button, div.gr
 }
 div.grid-container div.calcudoku-square input:focus {
   outline: none;
+}
+
+div.number-select-container {
+  width: 30em;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 1em;
+  box-sizing: border-box;
+}
+div.number-select-container button {
+  font-size: 3em;
+  padding: 0.15em 0.5em;
+  cursor: pointer;
 }
 
 * {
