--- a/src/stylesheets/calcudoku.scss
+++ b/src/stylesheets/calcudoku.scss
@@ -1,4 +1,5 @@
 @use "variables";
+@use "sass:color";
 
 $puzzle-size: 30em;
 
@@ -85,5 +86,45 @@ div.number-select-container {
 		font-size: 3em;
 		padding: 0.15em 0.5em;
 		cursor: pointer;
+	}
+}
+
+div.instance-list-container {
+	padding: 2em;
+	border: 3px solid variables.$color3;
+	margin-top: 2em;
+	border-radius: 1em;
+	background-color: color.adjust(variables.$color3, $lightness: 30);
+	h2 {
+		margin: 0;
+		color: color.adjust(variables.$color3, $lightness: -10);
+	}
+	ul {
+		list-style-type: none;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-auto-rows: auto;
+		gap: 1.5em;
+		padding: 0;
+		li {
+			background-color: white;
+			padding: 1em;
+			border: 3px solid variables.$color7;
+			border-radius: 0.5em;
+			cursor: pointer;
+			&:hover {
+				background-color: color.adjust(
+					variables.$color7,
+					$lightness: 28
+				);
+			}
+			h3 {
+				margin: 0;
+				color: color.adjust(variables.$color7, $lightness: -35);
+			}
+			div.list-preview {
+				margin: 0.5em;
+			}
+		}
 	}
 }
