--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -47,12 +47,13 @@ div.login-container div.login-window button.login-student {
   background-color: #9edfe5;
 }
 
-div.dashboard-container {
-  user-select: none;
-}
-div.dashboard-container p.student-name {
+p.student-name {
   text-align: right;
   color: #2c9aa4;
+}
+
+div.dashboard-container {
+  user-select: none;
 }
 div.dashboard-container div.potd-container {
   cursor: pointer;
@@ -92,16 +93,16 @@ div.dashboard-container div.puzzle-list-container ul {
 div.dashboard-container div.puzzle-list-container ul li {
   background-color: white;
   padding: 1em;
-  border: 3px solid #77ade6;
+  border: 3px solid #7354f4;
   border-radius: 0.5em;
   cursor: pointer;
 }
 div.dashboard-container div.puzzle-list-container ul li:hover {
-  background-color: #f0f6fc;
+  background-color: #e9e4fd;
 }
 div.dashboard-container div.puzzle-list-container ul li h3 {
   margin: 0;
-  color: #1a5490;
+  color: #23098c;
 }
 div.dashboard-container div.puzzle-list-container ul li div.list-preview {
   margin: 0.5em;
@@ -183,6 +184,43 @@ div.number-select-container button {
   font-size: 3em;
   padding: 0.15em 0.5em;
   cursor: pointer;
+}
+
+div.instance-list-container {
+  padding: 2em;
+  border: 3px solid #7354f4;
+  margin-top: 2em;
+  border-radius: 1em;
+  background-color: #e9e4fd;
+}
+div.instance-list-container h2 {
+  margin: 0;
+  color: #4c24f1;
+}
+div.instance-list-container ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: auto;
+  gap: 1.5em;
+  padding: 0;
+}
+div.instance-list-container ul li {
+  background-color: white;
+  padding: 1em;
+  border: 3px solid #77ade6;
+  border-radius: 0.5em;
+  cursor: pointer;
+}
+div.instance-list-container ul li:hover {
+  background-color: #f0f6fc;
+}
+div.instance-list-container ul li h3 {
+  margin: 0;
+  color: #1a5490;
+}
+div.instance-list-container ul li div.list-preview {
+  margin: 0.5em;
 }
 
 * {
