--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -72,6 +72,43 @@ div.dashboard-container div.puzzle-list-container {
   margin-top: 2em;
   border-radius: 1em;
   background-color: #ddf3f5;
+  /*padding: 2em;
+  border: 3px solid variables.$color10;
+  margin-top: 2em;
+  border-radius: 1em;
+  background-color: variables.$color12;
+  h2 {
+  	margin: 0;
+  	color: color.adjust(variables.$color10, $lightness: -55);
+  }
+  ul {
+  	list-style-type: none;
+  	display: grid;
+  	grid-template-columns: repeat(2, 1fr);
+  	grid-auto-rows: auto;
+  	gap: 1.5em;
+  	padding: 0;
+  	li {
+  		background-color: white;
+  		padding: 1em;
+  		border: 3px solid variables.$color3;
+  		border-radius: 0.5em;
+  		cursor: pointer;
+  		&:hover {
+  			background-color: color.adjust(
+  				variables.$color3,
+  				$lightness: 30
+  			);
+  		}
+  		h3 {
+  			margin: 0;
+  			color: color.adjust(variables.$color3, $lightness: -35);
+  		}
+  		div.list-preview {
+  			margin: 0.5em;
+  		}
+  	}
+  }*/
 }
 div.dashboard-container div.puzzle-list-container h2 {
   margin: 0;
@@ -97,7 +134,7 @@ div.dashboard-container div.puzzle-list-container ul li:hover {
 }
 div.dashboard-container div.puzzle-list-container ul li h3 {
   margin: 0;
-  color: #23098c;
+  color: #174f54;
 }
 div.dashboard-container div.puzzle-list-container ul li div.list-preview {
   margin: 0.5em;
@@ -222,6 +259,7 @@ div.instance-list-container ul li div.list-preview {
 
 * {
   font-family: "Open Sans", sans-serif;
+  user-select: none;
 }
 
 body {
