--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -7,6 +7,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 * {
 	font-family: "Open Sans", sans-serif;
+	user-select: none;
 }
 
 body {
