--- a/src/stylesheets/calcudoku.scss
+++ b/src/stylesheets/calcudoku.scss
@@ -2,19 +2,19 @@
 @use "sass:color";
 @use "./home";
 
-$base-size: 30em;
+$base-dimension: 30em;
 
-@mixin puzzle-container($puzzle-dim) {
-	$puzzle-size: $base-size * $puzzle-dim / 4;
+@mixin puzzle-container($puzzle-size) {
+	$puzzle-dimension: $base-dimension * $puzzle-size/ 4;
 	div.grid-container {
 		display: grid;
-		height: $puzzle-size;
-		width: $puzzle-size;
+		height: $puzzle-dimension;
+		width: $puzzle-dimension;
 		gap: 1px;
 		background-color: black;
 		border: solid 3px;
-		grid-template-columns: repeat($puzzle-dim, 1fr);
-		grid-template-rows: repeat($puzzle-dim, 1fr);
+		grid-template-columns: repeat($puzzle-size, 1fr);
+		grid-template-rows: repeat($puzzle-size, 1fr);
 
 		div.calcudoku-square {
 			position: relative;
@@ -66,7 +66,7 @@ $base-size: 30em;
 	}
 
 	div.number-select-container {
-		width: $puzzle-size;
+		width: $puzzle-dimension;
 		display: flex;
 		justify-content: space-evenly;
 		padding: 1em;
