centered calcudoku and removed title from instance page

--- a/src/stylesheets/calcudoku.scss
+++ b/src/stylesheets/calcudoku.scss
@@ -6,6 +6,10 @@ $base-dimension: 30em;
 
 @mixin puzzle-container($puzzle-size) {
 	$puzzle-dimension: $base-dimension * $puzzle-size/ 4;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 2em;
 	div.grid-container {
 		display: grid;
 		height: $puzzle-dimension;
