--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -19,6 +19,7 @@ nav.main-nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	padding: 0.3em;
 
 	button {
 		border: none;
@@ -61,4 +62,7 @@ nav.main-nav {
 		}
 	}
 
+	button.back-button{
+		font-size: 1em;
+	}
 }
