--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -3,6 +3,7 @@
 @use "./login";
 @use "./home";
 @use "./calcudoku";
+@use "logic";
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 * {
