--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -21,6 +21,7 @@ button{
 
 nav.main-nav {
 	display: flex;
+	flex-direction: row-reverse;
 	justify-content: space-between;
 	align-items: center;
 	padding: 0.3em;
