--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -12,6 +12,17 @@ div.login-container div.login-window {
   grid-template-areas: "error     error" "firstname firstname" "lastname  lastname" "create    login";
   border: 3px solid #9edfe5;
   border-radius: 1em;
+  position: relative;
+  overflow: hidden;
+}
+div.login-container div.login-window div.fetching-indicator {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fffd;
+  width: 100%;
+  height: 100%;
 }
 div.login-container div.login-window p.login-error {
   grid-area: error;
@@ -44,6 +55,9 @@ div.login-container div.login-window button {
   cursor: pointer;
   border: none;
   border-radius: 0.3em;
+}
+div.login-container div.login-window button:focus {
+  outline: none;
 }
 div.login-container div.login-window button.create-student {
   grid-area: create;
