--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -177,6 +177,11 @@ div.puzzle-container[size="4"] {
   align-items: center;
   padding: 2em;
 }
+div.puzzle-container[size="4"] div.saving-indicator {
+  align-self: flex-start;
+  margin-bottom: 0.3em;
+  color: #888;
+}
 div.puzzle-container[size="4"] div.grid-container {
   display: grid;
   height: 30em;
@@ -275,6 +280,11 @@ div.puzzle-container[size="5"] {
   align-items: center;
   padding: 2em;
 }
+div.puzzle-container[size="5"] div.saving-indicator {
+  align-self: flex-start;
+  margin-bottom: 0.3em;
+  color: #888;
+}
 div.puzzle-container[size="5"] div.grid-container {
   display: grid;
   height: 37.5em;
@@ -372,6 +382,11 @@ div.puzzle-container[size="6"] {
   flex-direction: column;
   align-items: center;
   padding: 2em;
+}
+div.puzzle-container[size="6"] div.saving-indicator {
+  align-self: flex-start;
+  margin-bottom: 0.3em;
+  color: #888;
 }
 div.puzzle-container[size="6"] div.grid-container {
   display: grid;
