--- a/src/stylesheets/_logic.scss
+++ b/src/stylesheets/_logic.scss
@@ -3,8 +3,13 @@ div.logic.instance {
 		white-space: pre-wrap;
 	}
 
-	textarea{
+	textarea {
 		width: 100%;
 		height: 13em;
+	}
+	div.saving-indicator {
+		text-align: right;
+		margin-bottom: 0.3em;
+		color: #888;
 	}
 }
