--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -535,6 +535,11 @@ div.logic.instance textarea {
   width: 100%;
   height: 13em;
 }
+div.logic.instance div.saving-indicator {
+  text-align: right;
+  margin-bottom: 0.3em;
+  color: #888;
+}
 
 body {
   padding: 1.5em;
