--- a/src/stylesheets/calcudoku.scss
+++ b/src/stylesheets/calcudoku.scss
@@ -11,8 +11,16 @@ $scaling-420px: 1 / 2;
 	flex-direction: column;
 	align-items: center;
 	padding: 2em;
-	div.saving-indicator{
-		align-self: flex-start;
+	div.saving-indicator {
+		padding-left: 1em;
+		width: $puzzle-dimension;
+		@media (max-width: 420px) {
+			width: $puzzle-dimension * 3 / 4;
+			font-size: .7em;
+			padding-left: 1em;
+		}
+
+		text-align: left;
 		margin-bottom: 0.3em;
 		color: #888;
 	}
@@ -36,7 +44,7 @@ $scaling-420px: 1 / 2;
 			box-sizing: border-box;
 			padding: 0.5em;
 			border: solid 2px;
-			@media(max-width: 420px){
+			@media (max-width: 420px) {
 				border: solid 2px * $scaling-420px;
 			}
 			cursor: pointer;
