--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -178,9 +178,18 @@ div.puzzle-container[size="4"] {
   padding: 2em;
 }
 div.puzzle-container[size="4"] div.saving-indicator {
-  align-self: flex-start;
+  padding-left: 1em;
+  width: 30em;
+  text-align: left;
   margin-bottom: 0.3em;
   color: #888;
+}
+@media (max-width: 420px) {
+  div.puzzle-container[size="4"] div.saving-indicator {
+    width: 22.5em;
+    font-size: 0.7em;
+    padding-left: 1em;
+  }
 }
 div.puzzle-container[size="4"] div.grid-container {
   display: grid;
@@ -281,9 +290,18 @@ div.puzzle-container[size="5"] {
   padding: 2em;
 }
 div.puzzle-container[size="5"] div.saving-indicator {
-  align-self: flex-start;
+  padding-left: 1em;
+  width: 37.5em;
+  text-align: left;
   margin-bottom: 0.3em;
   color: #888;
+}
+@media (max-width: 420px) {
+  div.puzzle-container[size="5"] div.saving-indicator {
+    width: 28.125em;
+    font-size: 0.7em;
+    padding-left: 1em;
+  }
 }
 div.puzzle-container[size="5"] div.grid-container {
   display: grid;
@@ -384,9 +402,18 @@ div.puzzle-container[size="6"] {
   padding: 2em;
 }
 div.puzzle-container[size="6"] div.saving-indicator {
-  align-self: flex-start;
+  padding-left: 1em;
+  width: 45em;
+  text-align: left;
   margin-bottom: 0.3em;
   color: #888;
+}
+@media (max-width: 420px) {
+  div.puzzle-container[size="6"] div.saving-indicator {
+    width: 33.75em;
+    font-size: 0.7em;
+    padding-left: 1em;
+  }
 }
 div.puzzle-container[size="6"] div.grid-container {
   display: grid;
